# STR_2025_2

./: .gitignore  CMakeLists.txt  sdkconfig
Parcial #1/main/: CMakeLists.txt  adc_control.c  button_control.c  led_pwm.c  main.c  potenciometro.c  termistor.c  uart_cmd.c
Parcial #1/main/inc/: adc_control.h  button_control.h  led_pwm.h  potenciometro.h  termistor.h  uart_cmd.h
Proyecto Final/: CMakeLists.txt  README.md  sdkconfig  sdkconfig.ci.c3eco7  sdkconfig.ci.esp32c2eco4_xtal26m  sdkconfig.ci.wpa_psk
Proyecto Final/main/: CMakeLists.txt  Display.c  Display.h  Kconfig.projbuild  LedRGB.c  LedRGB.h  Motor.c  Temp_LM35.c  Temp_LM35.h  http_server.c  http_server.h  idf_component.yml  keypad.c  keypad.h  main.c  softap_example_main.c  tasks_common.h  wifi_app.c  wifi_app.h
Proyecto Final/main/SRC/: Display.c  Display.h  Motor.h  Sensor.c  Sensor.h  main.c
TAREA 23 DE OCTUBRE/proyecto_LPT/: CMakeLists.txt
TAREA 23 DE OCTUBRE/proyecto_LPT/main/: CMakeLists.txt  adc_control.c  button_control.c  led_pwm.c  main.c  potenciometro.c  termistor.c  uart_cmd.c
TAREA LED/: CMakeLists.txt
Tarea 15 de octubre/LED_POTENCIOMETRO/: CMakeLists.txt  app_main.c  led_pwm.c  potenciometro.c
Tarea 15 de octubre/LED_POTENCIOMETRO/inc/: led_pwm.h  potenciometro.h
Tarea 15 de octubre/Potenciometro/: .gitignore  CMakeLists.txt
Tarea 15 de octubre/TERMISTORNTC/: .gitignore  CMakeLists.txt
main/: CMakeLists.txt  ledc_basic_example_main.c
main/SRC/: Display.c  Display.h  Motor.c  Motor.h  Sensor.c  Sensor.h  keypad.c  keypad.h  main.c
(+14 files in other folders)
